Add '24w40a' sources